<resources>
    <string name="app_name">ProjektZPO</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="zaloguj_si">Zaloguj się</string>
    <string name="edytuj_dane">Edytuj dane</string>
    <string name="ustaw_pow">Ustaw powiadomienie</string>
    <string name="wyloguj_si">Wyloguj się</string>
    <string name="zarejestruj_si">Zarejestruj się</string>
    <string name="has_o">Hasło</string>
    <string name="email">E-mail</string>
    <string name="imie">Imię</string>
    <string name="plec">Płeć</string>
    <string name="rok_urodzenia">Rok urodzenia</string>
    <string name="wzrost">Wzrost</string>
    <string name="vitalcheck">VitalCheck</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="err_msg_enter_name">Please enter your name</string>
    <string name="err_msg_enter_sex">Please enter your sex</string>
    <string name="err_msg_invalid_sex">Please enter "K" or "M"</string>
    <string name="err_msg_enter_height">Please enter your height</string>
    <string name="err_msg_invalid_height">Please enter your height in cm</string>
    <string name="err_msg_enter_birthdate">Please enter your birthdate</string>
    <string name="err_msg_invalid_birthdate">Invalid date</string>
    <string name="err_msg_enter_email">Please enter your email</string>
    <string name="err_msg_invalid_email">Invalid email</string>
    <string name="err_msg_enter_password">Please enter your password</string>
    <string name="err_msg_enter_reppassword">Please confirm your password</string>
    <string name="err_msg_invalid_password">Your password should contain at least 8 characters, 1 lowercase letter, 1 uppercase letter, 1 digit, 1 special character</string>
    <string name="err_msg_password_mismatch">Passwords mismatch</string>
    <string name="login_successful">You are logged in successfully</string>
    <string name="zapisz_pomiar">Zapisz pomiar</string>
    <string name="waga">Waga</string>
    <string name="ci_nienie_krwi">Ciśnienie krwi</string>
    <string name="t_tno">Tętno</string>
    <string name="saturacja_po2">Saturacja pO2</string>
    <string name="poziom_glukozy">Poziom glukozy</string>
    <string name="poziom_cholesterolu">Poziom cholesterolu</string>
    <string name="textview">TextView</string>
    <string name="selectedDateTextView" />
    <string-array name="sex_array">
        <item>Kobieta</item>
        <item>Mężczyzna</item>
    </string-array>
</resources>